--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@vercel/postgres": "^0.10.0",
+    "@types/leaflet": "^1.9.16",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.1.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
+    "react-icons": "^5.4.0",
     "react-dom": "latest",
+    "react-leaflet": "^5.0.0",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
