--- a/package.json
+++ b/package.json
@@ -8,23 +8,29 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@vercel/postgres": "^0.10.0",
     "@types/leaflet": "^1.9.16",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.1.0",
+    "moment": "^2.30.1",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
-    "react-icons": "^5.4.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "latest",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "recharts": "^2.15.1",
+    "styled-components": "^6.1.15",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
