--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.1.0",
     "moment": "^2.30.1",
+    "multer": "1.4.5-lts.2",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
