--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "latest",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^3.1.1",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
     "tailwindcss": "3.4.17",
