--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.1.0",
